--- a/Scss/style1.scss
+++ b/Scss/style1.scss
@@ -11,4 +11,6 @@
 @use 'components/certifiedTeachersSection';
 @use 'components/studentReviews';
 @use 'components/footer';
+@use 'components/newsletterModal';
+
 
