Created authModal & its styles, updated formValidation with new modal; Updated newsletterModal with demo acknowledgement; Made both modals & newsletter section responsive

--- a/Scss/style1.scss
+++ b/Scss/style1.scss
@@ -4,6 +4,7 @@
 @use 'components/header';
 @use 'components/heroSection';
 @use 'components/loginForm';
+@use 'components/authModal';
 @use 'components/featuresFloatSection';
 @use 'components/brandsMarquee';
 @use 'components/coursesSection';
