--- a/Scss/components/_footer.scss
+++ b/Scss/components/_footer.scss
@@ -20,6 +20,10 @@
             margin-bottom: 3%;
             padding-block: 3%;
 
+            @media (max-width: 480px) {
+                gap: 2rem;
+            }
+
             .footer-section{
                 h5{
                     color: #fff;
@@ -138,6 +142,11 @@
                         font-size: 14px;
                         margin-bottom: 1.5rem;
                         line-height: 1.5;
+
+                        @media (max-width: 590px) {
+                            font-size: 12px;
+                            margin-bottom: 5px;
+                        }
                     }
 
                     .newsletter-form{
@@ -194,13 +203,20 @@
                         }
                     }
                     .newsletter-error {
-                        position: absolute;
                         display: block;
                         margin-top: 0.6rem;
                         font-size: 13px;
                         color: $site-orange;
                         opacity: 0.95;
+                        line-height: 1.4;
+                        word-wrap: break-word;
+                        white-space: normal;
+
+                        @media (max-width: 590px) {
+                            font-size: 11px;
+                        }
                     }
+
                 }
             }
         }
@@ -230,6 +246,46 @@
         to {
             transform: scale(1);
             opacity: 1;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    #footer {
+        .footer-content {
+            gap: 2rem;
+        }
+
+        .newsletter-section {
+            .newsletter-form {
+
+                    input {
+                        width: 100%;
+                        padding: 0.75rem 1rem;
+                    }
+
+                    button {
+                        width: 100%;
+                        padding: 0.75rem;
+                        font-size: 15px;
+                    }
+            }
+        }
+    }
+}
+
+@media (max-width: 360px) {
+    #footer {
+        padding-top: 3rem;
+
+        .newsletter-section {
+            p {
+                font-size: 13px;
+            }
+
+            .newsletter-error {
+                font-size: 12px;
+            }
         }
     }
 }
