--- a/Scss/components/_loginForm.scss
+++ b/Scss/components/_loginForm.scss
@@ -109,6 +109,18 @@
             font-size: 11px;
         }
 
+        @media (max-width: 768px) {
+            .error {
+                bottom: 44px !important;
+            }
+        }
+
+        @media (max-width: 1024px) {
+            .error {
+                bottom: 55px;
+            }
+        }
+
     }
 }
 
@@ -155,6 +167,7 @@
                 }
             }
             h4{
+                margin-top: 25px !important;
                 text-align: center;
             }
         }
