--- a/Scss/components/_newsletterModal.scss
+++ b/Scss/components/_newsletterModal.scss
@@ -49,6 +49,20 @@
                 background: darken($site-green, 7%);
             }
         }
+
+        .modal-divider {
+            margin: 1rem 0;
+            border: none;
+            border-top: 1px solid #e5e5e5;
+        }
+
+        .demo-note {
+            font-size: 13px;
+            color: #666;
+            opacity: 0.75;
+            line-height: 1.5;
+        }
+
     }
 }
 
@@ -62,3 +76,34 @@
         opacity: 1;
     }
 }
+
+@media (max-width: 480px) {
+    .newsletter-modal {
+        padding: 1rem; 
+
+        .newsletter-modal-content {
+            padding: 1.6rem 1.4rem;
+            border-radius: 12px;
+            max-width: 90%;
+        }
+
+        h3 {
+            font-size: 18px;
+        }
+
+        p {
+            font-size: 13px;
+        }
+
+        .demo-note {
+            font-size: 12.5px;
+        }
+
+        button {
+            width: 100%;
+            padding: 0.7rem;
+            font-size: 14px;
+        }
+    }
+}
+
