--- a/Scss/abstracts/_animations.scss
+++ b/Scss/abstracts/_animations.scss
@@ -80,3 +80,14 @@
         transform: scale(1);
     }
 }
+
+@keyframes scaleIn {
+    from {
+        transform: scale(0.9);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
